# Proyecto1_EDD_PS26

./: CMakeLists.txt  README.md  gestor_catalogo.cpp  main.cpp  menu.cpp  menu.h  producto.cpp  prueba 1000 variedad.txt  prueba sencilla.txt
datos/: productos.csv
estructuras/: arbol_avl.cpp  arbol_b.cpp  arbol_bplus.cpp  tabla_hash.cpp
include/: gestor_catalogo.h  producto.h
include/estructuras/: arbol_avl.h  arbol_b.h  arbol_bplus.h  lista_enlazada.h  lista_ordenada.h  tabla_hash.h
include/utilidades/: generador_dot.h  lector_csv.h  logger.h  temporizador.h
output/: arbol_b.dot  arbol_bplus.dot  avl.dot
utilidades/: generador_dot.cpp  lector_csv.cpp  temporizador.cpp
